--- a/src/main/webapp/layout.jade
+++ b/src/main/webapp/layout.jade
@@ -2,13 +2,13 @@ doctype 5
 html
   head
     title hello world
-    link(rel="stylesheet", href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css")
+    link(rel="stylesheet", href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css")
   body
     div.container
       div.page-header
         h2 Hello world 
           block title
-      ul.inline
+      ul.list-inline
         li: a(href="/") index
         li: a(href="/markdown") markdown
        
