--- a/src/main/webapp/layout.jade
+++ b/src/main/webapp/layout.jade
@@ -1,7 +1,8 @@
 doctype 5
 html
   head
-    title hello world
+    title Blogs - 
+      block title
     link(rel="stylesheet", href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css")
   body
     div.container
