--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -7,11 +7,11 @@ html
   body
     div.container
       div.page-header
-        h2 Hello world 
+        h2 Blogs 
           block title
       ul.list-inline
-        li: a(href="/") index
-        li: a(href="/markdown") markdown
+        li: a(href="/") Home
+        li: a(href="/category") Categories
        
       block content
       hr
