--- a/src/main/webapp/views/article/index.jade
+++ b/src/main/webapp/views/article/index.jade
@@ -6,4 +6,4 @@ block title
 block content
   h2 #{article.Title}
   p #{article.CreatedAt}
-  p #{article.Text}
+  div!= markdownHelper.renderMarkdown(article.Text)
