Progress with test data generator

--- a/src/main/webapp/views/category/category.jade
+++ b/src/main/webapp/views/category/category.jade
@@ -9,5 +9,5 @@ block content
     for article in category.Articles
       li
         h3: a(href="/article/#{article.Id}") #{article.Title}
-        p #{article.Text}
+        div!= markdownHelper.renderMarkdown(article.Text)
   
