--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -1,3 +1,5 @@
+include mixins
+
 doctype 5
 html
   head
@@ -11,8 +13,7 @@ html
           block title
       ul.list-inline
         li: a(href="/") Home
-        li: a(href="/category") Categories
-       
+        li: a(href="/category") Categories    
       block content
       hr
       p &copy; loki2302
