--- a/src/main/webapp/views/category/category.jade
+++ b/src/main/webapp/views/category/category.jade
@@ -8,6 +8,7 @@ block content
   ul.list-unstyled
     for article in category.Articles
       li
-        h3: a(href="/article/#{article.Id}") #{article.Title}
-        div!= markdownHelper.renderMarkdown(article.Text)
+        h3: a(href="/article/#{article.Article.Id}") #{article.Article.Title}
+        +article_meta(article)
+        div!= markdownHelper.renderMarkdown(article.Article.Text)
   
