--- a/src/main/webapp/views/category/category.jade
+++ b/src/main/webapp/views/category/category.jade
@@ -1,14 +1,14 @@
 extends ../layout
 
 block title
-  | #{category.Category.Name}
+  | #{category.Name}
 
 block content
-  h2 #{category.Category.Name}
+  h2 #{category.Name}
   ul.list-unstyled
     for article in category.Articles
       li
-        h3: a(href="/article/#{article.Article.Id}") #{article.Article.Title}
+        h3: a(href="/article/#{article.ArticleId}") #{article.Title}
         +article_meta(article)
-        div!= markdownHelper.renderMarkdown(article.Article.Text)
-  
+        div!= markdownHelper.renderMarkdown(article.FirstParagraph)
+        p: a(href="/article/#{article.ArticleId}") (Read more...)
