--- a/src/main/webapp/views/category/index.jade
+++ b/src/main/webapp/views/category/index.jade
@@ -8,11 +8,13 @@ block content
   ul.list-unstyled
     for category in categories
       li
-        h2: a(href="/category/#{category.CategoryId}") #{category.Name}
+        h2
+          | <span class="glyphicon glyphicon-book"></span> 
+          a(href="/category/#{category.CategoryId}") #{category.Name}
         ul.list-unstyled
           for article in category.RecentArticles
             li
-              h3 #{article.Title}
+              h3 <span class="glyphicon glyphicon-file"></span> #{article.Title}
               +article_meta(article)
               p: a(href="/article/#{article.ArticleId}") (Read...)
               
