--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -5,15 +5,19 @@ html
   head
     title Blogs - 
       block title
-    link(rel="stylesheet", href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/assets/css/bootstrap.min.css")
   body
     div.container
       div.page-header
         h2 Blogs 
           block title
       ul.list-inline
-        li: a(href="/") Home
-        li: a(href="/category") Categories    
+        li
+          | <span class="glyphicon glyphicon-home"></span> 
+          a(href="/") Home
+        li
+          | <span class="glyphicon glyphicon-book"></span> 
+          a(href="/category") Categories    
       block content
       hr
       p &copy; loki2302
