--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -24,4 +24,6 @@ html
           block title        
       block content
       hr
-      p &copy; loki2302
+      p
+        | &copy; 2013 by  
+        a(href="http://loki2302.me", target="_blank") loki2302
