--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -14,10 +14,13 @@ html
         ul.nav.navbar-nav
           li: a(href="/") <span class="glyphicon glyphicon-home"></span> Home
           li: a(href="/category") <span class="glyphicon glyphicon-book"></span> Categories
-          li: a(href="/account/sign-in") <span class="glyphicon glyphicon-fire"></span> Sign In  
+          
         ul.nav.navbar-nav.navbar-right
-          li: a(href="#") <span class="glyphicon glyphicon-user"></span> #{authentication.name}
-          li: a(href="#") Sign Out
+          if authentication            
+            li: a(href="#") <span class="glyphicon glyphicon-user"></span> #{authentication.name}
+            li: a(href="/account/sign-out") Sign Out
+          else
+            li: a(href="/account/sign-in") <span class="glyphicon glyphicon-fire"></span> Sign In            
     .container      
       div.page-header
         h2 Blogs 
