--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -22,9 +22,9 @@ html
           else
             li: a(href="/account/sign-in") <span class="glyphicon glyphicon-fire"></span> Sign In            
     .container      
-      div.page-header
-        h2 Blogs 
-          block title        
+      h2 Blogs 
+        small
+          block title                
       block content
       hr
       p
