--- a/src/main/webapp/views/article/new.jade
+++ b/src/main/webapp/views/article/new.jade
@@ -1,7 +1,19 @@
 extends ../layout
  
 block title
-  | New
+  | New Article
 
 block content  
-  h2 Todo: New Article
+  form(method="POST", action="/article/new")
+    .form-group(class=userNameError ? "has-error" : "")
+      label.control-label(for="title") Title
+      input.form-control(type="text", name="title", value="todo")
+      if titleError
+        span.help-block #{titleError}
+    .form-group(class=text ? "has-error" : "")
+      label.control-label(for="text") Text
+      textarea.form-control(name="text") todo
+      span.help-block You can use <a href="http://en.wikipedia.org/wiki/Markdown" target="_blank">markdown</a>.
+      if textError
+        span.help-block #{textError}
+    button.btn.btn-primary.btn-lg(type="submit") Post
