Progress with authentication

--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -21,6 +21,7 @@ html
             li: a(href="/account/sign-out") Sign Out
           else
             li: a(href="/account/sign-in") <span class="glyphicon glyphicon-fire"></span> Sign In            
+            li: a(href="/account/sign-up") <span class="glyphicon glyphicon-fire"></span> Sign Up
     .container      
       h2 Blogs 
         small
