--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -25,7 +25,8 @@ html
     .container      
       h2 Blogs 
         small
-          block title                
+          block title
+      p #{magik}                
       block content
       hr
       p
