--- a/src/main/webapp/views/account/sign-up.jade
+++ b/src/main/webapp/views/account/sign-up.jade
@@ -16,4 +16,13 @@ block content
       input.form-control(type="password", name="password", value="#{signUpModel.password}")
       if passwordError
         span.help-block #{passwordError}
+    .form-group
+      .radio
+        label    
+          input(type="radio", name="role", value="Reader", checked=signUpModel.role == "Reader")
+          | Reader
+      .radio
+        label    
+          input(type="radio", name="role", value="Writer", checked=signUpModel.role == "Writer")
+          | Writer
     button.btn.btn-primary.btn-lg(type="submit") Sign Up
