--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -6,22 +6,30 @@ html
     title Blogs - 
       block title
     link(rel="stylesheet", href="/assets/css/bootstrap.min.css")
+    script(type="text/javascript", src="/assets/js/jquery.js")
+    script(type="text/javascript", src="/assets/js/bootstrap.min.js")
   body
     nav.navbar.navbar-default
       .container  
         .navbar-header
+          button.navbar-toggle(type="button", data-toggle="collapse", data-target=".my-navbar-collapse")
+            span.sr-only Toggle Navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
           a.navbar-brand(href="/") Brand
-        ul.nav.navbar-nav
-          li: a(href="/") <span class="glyphicon glyphicon-home"></span> Home
-          li: a(href="/category") <span class="glyphicon glyphicon-book"></span> Categories
+        nav.collapse.navbar-collapse.my-navbar-collapse
+          ul.nav.navbar-nav
+            li: a(href="/") <span class="glyphicon glyphicon-home"></span> Home
+            li: a(href="/category") <span class="glyphicon glyphicon-book"></span> Categories
           
-        ul.nav.navbar-nav.navbar-right
-          if User            
-            li: a(href="#") <span class="glyphicon glyphicon-user"></span> #{User.UserName}
-            li: a(href="/account/sign-out") Sign Out
-          else
-            li: a(href="/account/sign-in") <span class="glyphicon glyphicon-fire"></span> Sign In            
-            li: a(href="/account/sign-up") <span class="glyphicon glyphicon-fire"></span> Sign Up
+          ul.nav.navbar-nav.navbar-right
+            if User            
+              li: a(href="#") <span class="glyphicon glyphicon-user"></span> #{User.UserName}
+              li: a(href="/account/sign-out") Sign Out
+            else
+              li: a(href="/account/sign-in") <span class="glyphicon glyphicon-fire"></span> Sign In            
+              li: a(href="/account/sign-up") <span class="glyphicon glyphicon-fire"></span> Sign Up
     .container      
       h2 Blogs 
         small
