--- a/src/main/webapp/views/article/index.jade
+++ b/src/main/webapp/views/article/index.jade
@@ -6,6 +6,12 @@ block title
 block content  
   h2 <span class="glyphicon glyphicon-file"></span> #{article.Title}
   +article_meta(article)
+  ul.list-inline
+    li: a(href="#") 1
+    li: a(href="#") 2
+    li: a(href="#") 3
+    li: a(href="#") 4
+    li: a(href="#") 5
   div!= markdownHelper.renderMarkdown(article.Text)
   hr
   if !article.Comments
