Implemented vote widget behavior

--- a/src/main/webapp/views/layout.jade
+++ b/src/main/webapp/views/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel="stylesheet", href="/assets/css/bootstrap.min.css")
     script(type="text/javascript", src="/assets/js/jquery.js")
     script(type="text/javascript", src="/assets/js/bootstrap.min.js")
+    script(type="text/javascript", src="/assets/js/blogs.js")
   body
     nav.navbar.navbar-default
       .container  
