--- a/src/main/webapp/views/article/index.jade
+++ b/src/main/webapp/views/article/index.jade
@@ -6,14 +6,19 @@ block title
 block content  
   h2 <span class="glyphicon glyphicon-file"></span> #{article.Title}
   +article_meta(article)  
-  div
+  div  
     .btn-group
-      button(type="button").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
-      button(type="button").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
-      button(type="button").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
-      button(type="button").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
-      button(type="button").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
+      button#vote1(type="button", data-vote="1").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
+      button#vote2(type="button", data-vote="2").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
+      button#vote3(type="button", data-vote="3").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
+      button#vote4(type="button", data-vote="4").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
+      button#vote5(type="button", data-vote="5").btn.btn-default.btn-sm: i.glyphicon.glyphicon-star
     |  #{article.AverageVote} (#{article.VoteCount} vote(s))
+    script.
+      $("[data-vote]").click(function(e) {
+        var vote = $(e.delegateTarget).attr("data-vote");
+        Blogs.voteForArticle(#{article.ArticleId}, vote);        
+      });
   div!= markdownHelper.renderMarkdown(article.Text)
   hr
   if !article.Comments
