--- a/src/main/webapp/views/account/sign-in.html
+++ b/src/main/webapp/views/account/sign-in.html
@@ -1,5 +1,5 @@
 @args SignInModel signInModel, String userNameError, String passwordError
-@extends(layout.html)
+@extends(layout.html, area="sign-in")
 
 @section("title") {Sign In}
 
