--- a/src/main/webapp/views/account/sign-up.html
+++ b/src/main/webapp/views/account/sign-up.html
@@ -1,5 +1,5 @@
 @args SignUpModel signUpModel, String userNameError, String passwordError
-@extends(layout.html)
+@extends(layout.html, area="sign-up")
 
 @section("title") {Sign Up}
 
