--- a/src/main/webapp/views/article/edit.html
+++ b/src/main/webapp/views/article/edit.html
@@ -1,5 +1,5 @@
 @args int articleId, ArticleModel articleModel, String titleError, String textError
-@extends(layout.html)
+@extends(layout.html, area="categories")
 
 @section("title") {Edit Article}
 
