--- a/src/main/webapp/views/article/index.html
+++ b/src/main/webapp/views/article/index.html
@@ -1,5 +1,5 @@
 @args CompleteArticle article
-@extends(layout.html)
+@extends(layout.html, area="categories")
 
 @section("title") {@article.Title}
 
