--- a/src/main/webapp/views/category/category.html
+++ b/src/main/webapp/views/category/category.html
@@ -1,5 +1,5 @@
 @args CompleteCategory category
-@extends(layout.html)
+@extends(layout.html, area="categories")
 
 @section("title") {@category.Name}
 
