--- a/src/main/webapp/views/category/index.html
+++ b/src/main/webapp/views/category/index.html
@@ -1,5 +1,5 @@
 @args List<ShortCategory> categories
-@extends(layout.html)
+@extends(layout.html, area="categories")
 
 @section("title") {Categories}
 
