--- a/src/main/webapp/views/article/new.html
+++ b/src/main/webapp/views/article/new.html
@@ -1,5 +1,5 @@
 @args int categoryId, ArticleModel articleModel, String titleError, String textError
-@extends(layout.html)
+@extends(layout.html, area="categories")
 
 @section("title") {New Article}
 
