--- a/src/main/webapp/views/layout.html
+++ b/src/main/webapp/views/layout.html
@@ -1,4 +1,4 @@
-@args UserDetails User;
+@args UserDetails User, String area;
 
 <!doctype html>
 <html>
@@ -23,16 +23,16 @@
 				</div>
 				<nav class="collapse navbar-collapse my-navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-						<li><a href="/category"><span class="glyphicon glyphicon-book"></span> Categories</a></li>
+						<li class="@if(area == "home") { active }"><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+						<li class="@if(area == "categories") { active }"><a href="/category"><span class="glyphicon glyphicon-book"></span> Categories</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						@if(User) {
 							<li><a href="#"><span class="glyphicon glyphicon-user"></span> @User.UserName</a></li>
 							<li><a href="/account/sign-out">Sign Out</a></li>
 						} else {
-							<li><a href="/account/sign-in"><span class="glyphicon glyphicon-fire"></span> Sign In</a></li>            
-              				<li><a href="/account/sign-up"><span class="glyphicon glyphicon-fire"></span> Sign Up</a></li>
+							<li class="@if(area == "sign-in") { active }"><a href="/account/sign-in"><span class="glyphicon glyphicon-fire"></span> Sign In</a></li>            
+              				<li class="@if(area == "sign-up") { active }"><a href="/account/sign-up"><span class="glyphicon glyphicon-fire"></span> Sign Up</a></li>
 						}
 					</ul>
 				</nav>
