--- a/src/main/webapp/views/category/index.html
+++ b/src/main/webapp/views/category/index.html
@@ -3,21 +3,20 @@
 
 @section("title") {Categories}
 
-@section("content") {
-	<ul class="list-unstyled">
-		@for(ShortCategory category : categories) {
-			<li>
+@section("content") {	
+	@for(ShortCategory category : categories) {
+		<div class="row">
+			<div class="col-md-12">
 				<h2><span class="glyphicon glyphicon-book"></span> <a href="/category/@category.CategoryId">@category.Name</a></h2>
-				<ul class="list-unstyled">
-					@for(BriefArticle article : category.RecentArticles) {
-						<li>
-							<h3><span class="glyphicon glyphicon-file"></span> @article.Title</h3>
-							@articleMeta(article)
-							<p><a href="/article/@article.ArticleId">(Read...)</a></p>
-						</li>
-					}				
-				</ul>
-			</li>
-		}
-	</ul>
+			</div>
+		</div>
+		<div class="row">
+			@for(BriefArticle article : category.RecentArticles) {
+				<div class="col-md-4">
+					<h3><span class="glyphicon glyphicon-file"></span> <a href="/article/@article.ArticleId">@article.Title</a></h3>
+					@articleMeta(article)
+				</div>
+			}
+		</div>
+	}
 }
