--- a/src/main/webapp/views/user/index.html
+++ b/src/main/webapp/views/user/index.html
@@ -7,24 +7,10 @@
 	<h2>@user.Name</h2>
 	<div class="row">
 		<div class="col-md-6">
-			<ul class="list-unstyled">
-				@for(BriefArticle article : user.Articles) {
-					<li>
-						<h3><span class="glyphicon glyphicon-file"></span> <a href="/article/@article.ArticleId">@article.Title</a></h3>
-						@articleMeta(article)
-					</li>
-				}
-			</ul>
+			@user.articles(userId = user.UserId, articles = user.Articles)
 		</div>
 		<div class="col-md-6">
-			<ul class="list-unstyled">
-				@for(Comment comment : user.Comments) {
-					<li>
-						@comment.Text
-						@commentMeta(comment)
-					</li>
-				}
-			</ul>
+			@user.comments(userId = user.UserId, comments = user.Comments)
 		</div>
 	</div>
 }
