--- a/src/main/webapp/views/layout.html
+++ b/src/main/webapp/views/layout.html
@@ -4,7 +4,9 @@
 <html>
 	<head>
 		<title>Blogs - @render("title")</title>
-		<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="/assets/css/bootstrap.min.css"> -->
+		<link rel="stylesheet" href="/assets/css/united.min.css">		
+		
 	    <script type="text/javascript" src="/assets/js/jquery.js"></script>
 	    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 	    <script type="text/javascript" src="/assets/js/blogs.js"></script>
