Now using Spring Boot 1.4.0.RELEASE

--- a/src/main/resources/views/account/sign-in.html
+++ b/src/main/resources/views/account/sign-in.html
@@ -1,3 +1,11 @@
+@import me.loki2302.service.dto.*
+@import me.loki2302.service.dto.article.*
+@import me.loki2302.service.dto.category.*
+@import me.loki2302.service.dto.user.*
+@import me.loki2302.mvc.*
+@import me.loki2302.controllers.*
+@import me.loki2302.dao.rows.Page
+
 @args SignInModel signInModel, String userNameError, String passwordError
 @extends(layout.html, area="sign-in")
 
