--- a/src/main/resources/views/article/new.html
+++ b/src/main/resources/views/article/new.html
@@ -1,3 +1,11 @@
+@import me.loki2302.service.dto.*
+@import me.loki2302.service.dto.article.*
+@import me.loki2302.service.dto.category.*
+@import me.loki2302.service.dto.user.*
+@import me.loki2302.mvc.*
+@import me.loki2302.controllers.*
+@import me.loki2302.dao.rows.Page
+
 @args int categoryId, ArticleModel articleModel, String titleError, String textError
 @extends(layout.html, area="categories")
 
