--- a/src/main/resources/views/commentMeta.html
+++ b/src/main/resources/views/commentMeta.html
@@ -1,3 +1,11 @@
+@import me.loki2302.service.dto.*
+@import me.loki2302.service.dto.article.*
+@import me.loki2302.service.dto.category.*
+@import me.loki2302.service.dto.user.*
+@import me.loki2302.mvc.*
+@import me.loki2302.controllers.*
+@import me.loki2302.dao.rows.Page
+
 @args Comment comment
 <p class="text-muted">
 	<span class="glyphicon glyphicon-calendar"></span> @fancyDate(comment.CreatedAt)
